# Resume-Creator

./: README.md  main.py
Resume-Creator/: pyproject.toml
Resume-Creator/instance/: users.db
Resume-Creator/static/: script.js  style.css
Resume-Creator/templates/: base.html  form.html  login.html  register.html  saved_resumes.html  select_template.html  template1.html  template2.html  template3.html
