[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.6",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "fpdf>=1.7.2",
    "pdfkit>=1.0.0",
    "werkzeug>=3.1.3",
    "weasyprint>=66.0",
]
